@startuml

title Declared-source prefetch state machine
[*] --> Storage

state Storage as "Declared DEVICE/TEXTSOURCE accessor" {

  state ZeroStep as "ZERO Step" {
    [*] --> Empty
    state Empty : no data
  }

  state MainLoop as "Main Processing Loop" {
    state Flux : physical source read enabled
    state Armed : chamber_ contains the prefetched record
    Flux --> Armed : revRead(0): read source into chamber_
    Armed --> Armed : fire(): publish chamber_ to payload/history
    Armed --> Flux : end of slot: unlock next source read
  }

  Empty -> Flux : bootstrap declaration

  }

@enduml
